cabal-version:      2.4
name:               wordle
version:            0.1.0.0
synopsis:           Console implementation of wordle word-game
bug-reports:        https://github.com/glguy/wordle/issues
license:            ISC
license-file:       LICENSE
author:             Eric Mertens
maintainer:         emertens@gmail.com
copyright:          (c) Eric Mertens, 2022
category:           Games
extra-source-files: CHANGELOG.md
data-files:
    all.txt
    play.txt

description:
    Console implementation of wordle supporting hosting and solving
    wordle puzzles.

source-repository head
    type:           git
    location:       https://github.com/glguy/wordle

executable wordle
    main-is:        Main.hs
    default-language: Haskell2010
    other-modules:
        Options
        Paths_wordle
    autogen-modules:
        Paths_wordle
    build-depends:
        ansi-terminal ^>=0.11,
        base          >=4.15 && <4.17,
        containers    ^>=0.6,
        random        ^>=1.2,
